--- a/second_page.html
+++ b/second_page.html
@@ -35,20 +35,27 @@ $(document).ready(function() {
 });
 
 function getUserProfile() {
-  $.ajax({
-    url: "https://api.spotify.com/v1/me",
-    type: "GET",
-    headers: {
-      "Authorization": "Bearer " + localStorage.getItem("access_token")
-    },
-    success: function(response) {
-      var profilePictureUrl = response.images[0].url;
-      $("#profile-picture").attr("src", profilePictureUrl);
-    },
-    error: function(xhr, status, error) {
-      console.log(error);
-    }
-  });
+  var accessToken = getAccessTokenFromLocalStorage();
+  if (accessToken) {
+    $.ajax({
+      url: "https://api.spotify.com/v1/me",
+      type: "GET",
+      headers: {
+        "Authorization": "Bearer " + accessToken
+      },
+      success: function(response) {
+        var profilePictureUrl = response.images[0].url;
+        $("#profile-picture").attr("src", profilePictureUrl);
+      },
+      error: function(xhr, status, error) {
+        console.log(error);
+      }
+    });
+  }
+}
+
+function getAccessTokenFromLocalStorage() {
+  return localStorage.getItem("access_token");
 }
   
 function searchSongs() {
@@ -74,6 +81,7 @@ function searchSongs() {
     },
     success: function(response) {
       var accessToken = response.access_token;
+      localStorage.setItem("access_token", accessToken); // Store access token in localStorage
       searchTopTracks(selectedArtist, accessToken);
     },
     error: function(xhr, status, error) {
