--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             var accessToken = getAccessTokenFromURL();
             if (accessToken) {
                 // If access token is present, redirect to the second page
-                window.location.href = "/second_page.html";
+                window.location.href = "https://scripteds.github.io/MoodSwinger/second_page.html";;
             }
         });
 
