--- a/index.html
+++ b/index.html
@@ -5,9 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MoodSwinger</title>
     <style>
-        /* Style for the disabled dropdown */
+        /* Body style */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+
+        /* Heading style */
+        h2 {
+            color: #333;
+        }
+
+        /* Paragraph style */
+        p {
+            color: #666;
+        }
+
+        /* Select dropdown style */
         #dropdown {
             background-color: #f2f2f2;
+            padding: 8px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            width: 200px;
+        }
+
+        /* Login button style */
+        .spotify-login-btn {
+            display: inline-block;
+            background-color: #1db954;
+            color: #fff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 4px;
+            margin-top: 10px;
+        }
+
+        .spotify-login-btn:hover {
+            background-color: #1ed760;
         }
     </style>
 </head>
