--- a/second_page.html
+++ b/second_page.html
@@ -5,6 +5,65 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spotify API Search</title>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<style>
+  /* Body style */
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+    background-color: #f9f9f9;
+  }
+
+  /* Heading style */
+  h1 {
+    color: #333;
+    text-align: center;
+  }
+
+  /* Select dropdown style */
+  #artists {
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    width: 200px;
+    margin-bottom: 10px;
+  }
+
+  /* Search button style */
+  button {
+    padding: 10px 20px;
+    background-color: #1db954;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #1ed760;
+  }
+
+  /* Results container style */
+  #results {
+    margin-top: 20px;
+  }
+
+  /* Logout button style */
+  #logout-button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #ff3b3b;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  #logout-button:hover {
+    background-color: #ff5e5e;
+  }
+</style>
 </head>
 <body>
 
