--- a/second_page.html
+++ b/second_page.html
@@ -20,6 +20,12 @@
     text-align: center;
   }
 
+  /* Container for dropdown and button */
+  .search-container {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
   /* Select dropdown style */
   #artists {
     padding: 8px;
@@ -69,16 +75,18 @@
 
 <h1>Spotify API Search</h1>
 
-<select id="artists">
-  <option value="0">Select an artist...</option>
-  <option value="4dpARuHxo51G3z768sgnrY">Adele</option>
-  <option value="3TVXtAsR1Inumwj472S9r4">Drake</option>
-  <option value="6qqNVTkY8uBg9cP3Jd7DAH">Billie Eilish</option>
-  <option value="1Xyo4u8uXC1ZmMpatF05PJ">The Weeknd</option>
-  <option value="0du5cEVh5yTK9QJze8zA0C">Bruno Mars</option>
-</select>
+<div class="search-container">
+  <select id="artists">
+    <option value="0">Select an artist...</option>
+    <option value="4dpARuHxo51G3z768sgnrY">Adele</option>
+    <option value="3TVXtAsR1Inumwj472S9r4">Drake</option>
+    <option value="6qqNVTkY8uBg9cP3Jd7DAH">Billie Eilish</option>
+    <option value="1Xyo4u8uXC1ZmMpatF05PJ">The Weeknd</option>
+    <option value="0du5cEVh5yTK9QJze8zA0C">Bruno Mars</option>
+  </select>
 
-<button onclick="searchSongs()">Search</button>
+  <button onclick="searchSongs()">Search</button>
+</div>
 
 <div id="results"></div>
 
