--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h2>Spotify Login</h2>
     <p>Select a playlist:</p>
     <select id="dropdown" disabled>
-        <option value="playlist1">Playlist 1</option>
+        <option value="playlist1">Select a mood...</option>
         <option value="playlist2">Playlist 2</option>
         <option value="playlist3">Playlist 3</option>
         <option value="playlist4">Playlist 4</option>
