--- a/second_page.html
+++ b/second_page.html
@@ -94,7 +94,7 @@
 
 <div class="search-container">
   <select id="artists">
-    <option value="0">Select an artist...</option>
+    <option value="0">Select a mood...</option>
     <option value="4dpARuHxo51G3z768sgnrY">Adele</option>
     <option value="3TVXtAsR1Inumwj472S9r4">Drake</option>
     <option value="6qqNVTkY8uBg9cP3Jd7DAH">Billie Eilish</option>
