--- a/track.html
+++ b/track.html
@@ -163,13 +163,13 @@ $(document).ready(function() {
   // Attach event listener to logout button
   $("#logout-button").click(function() {
     // Redirect to index.html
-    window.location.href = "index.html";
+    window.location.href = "https://scripteds.github.io/MoodSwinger/index.html";
   });
 
   // Attach event listener to back button
   $("#back-button").click(function() {
-    // Navigate back to index.html
-    window.location.href = "second_page.html";
+    // Navigate back to second_page.html
+    window.location.href = "https://scripteds.github.io/MoodSwinger/second_page.html";
   });
 
   // Get track details from local storage
